Fix padding on mobile

--- a/src/app/modules/settings/pages/category-settings/category-settings.component.scss
+++ b/src/app/modules/settings/pages/category-settings/category-settings.component.scss
@@ -1,3 +1,7 @@
-.page {
-  padding: 0 64px;
+@import '~@angular/flex-layout/mq';
+
+@include layout-bp(gt-sm) {
+  .page {
+    padding: 0 64px;
+  }
 }
